# employeurd-coda-megagest

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  convert.py  pyproject.toml
.github/: FUNDING.yml  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: aide.yml  amelioration.yml  bogue.yml  config.yml  demande.yml
.github/workflows/: ci.yml  codeql.yml  copilot-setup-steps.yml  release.yml
config/: app.yml  comptes.yml  mapping.example.json  rapports.yml  regles_validation.yml
docs/: formats.md  guide_utilisateur.md  index.html  mentions_legales.md
docs/assets/: site.css  site.js
docs/releases/: EmployeurD-MegaGest-v0.1.2.virustotal.md  EmployeurD-MegaGest-v0.1.4.virustotal.md
packaging/windows/: EmployeurD-MegaGest.spec
samples/: OPD_RP_00001234_SPD640-P_EMPLOYEURD-BALANCED_SYNTHETIQUE.CSV  OPD_RP_00001234_SPD640-P_EMPLOYEURD-UNBALANCED_SYNTHETIQUE.CSV  OPD_RP_00001234_SPD640-P_EMPLOYEURD-UNKNOWN-ACCOUNT_SYNTHETIQUE.CSV  OPD_RP_00001234_SPD640-P_EMPLOYEURD-ZERO-AMOUNT_SYNTHETIQUE.CSV  OPD_RP_00005678_SPD681_ECART_SYNTHETIQUE.XML  OPD_RP_00005678_SPD681_SYNTHETIQUE.XML  OPD_RP_99999999_SPD681_SYNTHETIQUE.XML  README.md  employeurd-balanced.txt  employeurd-example.csv  employeurd-spd681-balanced.txt  employeurd-unbalanced.txt  employeurd-unknown-account.txt  employeurd-zero-amount.txt
scripts/: agent_validate.py  append_release_verification.py  audit_release_readiness.py  build_exe.ps1  extract_changelog.py  generate_release_manifest.py  generate_sbom.py  prepare_release.py  publish_release.ps1  release.ps1  submit_virustotal.py
src/employeurd_megagest/: __init__.py  app_gui.py  audit_log.py  cli.py  config.py  converter.py  errors.py  gui_controller.py  gui_dialogs.py  gui_entry.py  gui_state.py  gui_texts.py  gui_theme.py  integrity.py  models.py  output_plan.py  parser_employeurd.py  parser_mnd.py  platform_actions.py  preferences.py  reconciliation.py  report_markdown.py  resource_paths.py  update_check.py  user_messages.py  validation_json.py  validator.py  version.py  writer_mnd.py
tests/: test_converter.py
(+10 files in other folders)
