[project]
name = "employeurd-to-megagest-mnd"
version = "0.1.0"
description = "Convertisseur local EmployeurD vers MégaGest MND avec validations strictes."
requires-python = ">=3.11"
license = "MIT"

[project.optional-dependencies]
build = ["cx_Freeze>=8.6.4"]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project.scripts]
employeurd-megagest = "employeurd_megagest.cli:main"
employeurd-megagest-gui = "employeurd_megagest.app_gui:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
employeurd_megagest = ["assets/*.png"]
