[project]
name = "employeurd-to-megagest-mnd"
version = "0.1.2"
description = "Outil Windows local pour créer un fichier MND pour MégaGest à partir d'une écriture détaillée EmployeurD (TXT), avec contrôle des soldes et rapports de validation."
requires-python = ">=3.12"
license = "MIT"

[project.optional-dependencies]
build = ["cx_Freeze>=8.6.4"]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project.scripts]
employeurd-megagest = "employeurd_megagest.cli:main"
employeurd-megagest-gui = "employeurd_megagest.app_gui:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
employeurd_megagest = ["assets/*.png"]
